@@ -1,3 +1,7 @@
+Nov 29, 2003
+
+  * FIXED: rdfs_individual_of(+, -) (only generated Resource).
+
 Nov 20, 2003
 
   * FIXED: Avoid the use of typed nodes if the type-resource cannot be
